--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "Camkart ",
-	"name": "Camkart  | An e-commerce app",
+	"short_name": "VizzTube ",
+	"name": "VizzTube  | An Video-library app",
 	"start_url": ".",
 	"display": "standalone",
 	"theme_color": "#000000",
