--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@chakra-ui/react": "^1.6.3",
-		"@emotion/react": "^11",
-		"@emotion/styled": "^11",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"axios": "^0.21.1",
-		"framer-motion": "^4",
+		"formik": "^2.2.9",
 		"history": "^5.0.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
@@ -19,7 +16,8 @@
 		"react-router-dom": "^6.0.0-beta.0",
 		"react-scripts": "4.0.3",
 		"react-spinners": "^0.11.0",
-		"web-vitals": "^1.0.1"
+		"web-vitals": "^1.0.1",
+		"yup": "^0.32.9"
 	},
 	"scripts": {
 		"start": "react-scripts start",
