--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-router-dom": "^6.0.0-beta.0",
 		"react-scripts": "4.0.3",
 		"react-spinners": "^0.11.0",
+		"react-spinners-kit": "^1.9.1",
 		"web-vitals": "^1.0.1",
 		"yup": "^0.32.9"
 	},
@@ -42,6 +43,5 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	},
-	"devDependencies": {}
+	}
 }
